# rust-learn

./: .gitignore  Cargo.toml
ZRust-Tut2/bb001_DataTypes/: Cargo.toml
ZRust-Tut2/bb001_DataTypes/src/: main.rs
ZRust-Tut2/bb002_Modules/: Cargo.toml
ZRust-Tut2/bb002_Modules/src/: main.rs  patterns.rs  play_mod.rs
ZRust-Tut2/bb003_Random/: Cargo.toml
ZRust-Tut2/bb003_Random/src/: main.rs
ZRust-Tut2/bb004_Slices/: Cargo.toml
ZRust-Tut2/bb004_Slices/src/: main.rs
ZRust-Tut2/bb005_Struts/: Cargo.toml
ZRust-Tut2/bb005_Struts/src/: main.rs
ZRust-Tut2/bb006_Closures/: Cargo.toml
ZRust-Tut2/bb006_Closures/src/: main.rs
ZRust-Tut2/bb006_PatternMatching/: Cargo.toml
ZRust-Tut2/bb006_PatternMatching/src/: main.rs
ZRust-Tut2/bb007_Traits/: Cargo.toml
ZRust-Tut2/bb007_Traits/src/: main.rs
ZRust-Tut2/bb007_TraitsGenerics/: Cargo.toml
ZRust-Tut2/bb007_Traits_My_CUstom_Created/: Cargo.toml
ZRust-Tut2/bb007_Traits_My_CUstom_Created/src/: main.rs
ZRust-Tut2/bb008_lifetimes/: Cargo.toml
ZRust-Tut2/bb008_lifetimes/src/: main.rs
ZRust-Tut2/bb009_Refrences/: Cargo.toml
ZRust-Tut2/bb009_Refrences/src/: main.rs
ZRust-Tut2/bb010_HigherOrderFunctions/: Cargo.toml
ZRust-Tut2/bb010_HigherOrderFunctions/src/: main.rs
src/: main.rs
src/bg001_userInput/: Cargo.toml
src/bg001_user_input/: Cargo.toml
src/bg001_user_input/src/: main.rs
src/o01_Primitive_Datatype/: Cargo.toml
src/o01_Primitive_Datatype/src/: main.rs
src/o02_Compound_Datatype/: Cargo.toml
src/o02_Compound_Datatype/src/: main.rs
src/o03_variables_and_constants/: Cargo.toml
src/o03_variables_and_constants/src/: main.rs
src/o04_Loops/: Cargo.toml
src/o04_Loops/src/: main.rs
src/o05_Conditionals/: Cargo.toml
src/o06_Functions/: Cargo.toml
src/o07_Ownerships/: Cargo.toml
src/o08_Structs/: Cargo.toml
src/o09_Structs_with_Methods/: Cargo.toml
src/o10_Enums/: Cargo.toml
src/o11_Enums_impl/: Cargo.toml
src/o20_Generics/: Cargo.toml
zz_SelfTest001/: Cargo.toml
zz_SelfTest001/FactorialNumber/: Cargo.toml
zz_SelfTest001/First_index_occurrence/: Cargo.toml
zz_SelfTest001/Length_of_last_word/: Cargo.toml
zz_SelfTest001/src/: main.rs
zzz_Concerency/: Cargo.toml
(+15 files in other folders)
