workspace = { members = ["src/o10_Enums", "src/o09_Structs_with_Methods", "src/o08_Structs", "src/o07_Ownerships", "src/o06_Functions", "src/o05_Conditionals", "src/o04_Loops", "src/o03_variables_and_constants", "src/o01_Primitive_Datatype", "src/o02_Compound_Datatype", "src/o11_Enums_impl", "src/bg001_userInput", "src/bg001_user_input", "src/o20_Generics", "zz_SelfTest001", "ZRust-Tut2/bb001_DataTypes", "ZRust-Tut2/bb002_Modules", "ZRust-Tut2/bb003_Random", "ZRust-Tut2/bb004_Slices", "ZRust-Tut2/bb005_Struts", "ZRust-Tut2/bb006_PatternMatching", "ZRust-Tut2/bb006_Closures", "ZRust-Tut2/bb007_Traits", "ZRust-Tut2/bb007_TraitsGenerics", "ZRust-Tut2/bb007_Traits_My_CUstom_Created", "ZRust-Tut2/bb008_lifetimes", "ZRust-Tut2/bb009_Refrences"] }

[package]
name = "rust_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
